[gd_scene load_steps=2 format=3 uid="uid://b6wgibksk7qr2"]

[ext_resource type="Script" uid="uid://cfp7jnom3u5db" path="res://player/player_stats_screen/stats_bar.gd" id="1_hmtlc"]

[node name="StatsBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hmtlc")

[node name="ColorRect1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 19.0
offset_bottom = 27.0
rotation = -0.785398
color = Color(0.745098, 0.745098, 0.745098, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 43.0
offset_bottom = 27.0
rotation = -0.785398
color = Color(1, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = 16.0
offset_right = 67.0
offset_bottom = 27.0
rotation = -0.785398
color = Color(1, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 91.0
offset_bottom = 27.0
rotation = -0.785398
color = Color(1, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 104.0
offset_top = 16.0
offset_right = 115.0
offset_bottom = 27.0
rotation = -0.785398
color = Color(0, 1, 0, 1)
